# LiteRT-LM-Exp

./: Package.swift  version.bzl
.github/workflows/: ml-ci-build-win.yml  ml-ci-build.yml  windows-build.yml
c/: BUILD  engine.cc  engine.h  engine_test.cc
kotlin/java/com/google/ai/edge/litertlm/: Config.kt
python/litert_lm/: BUILD  __init__.py  _ffi.py  benchmark.py  conversation.py  engine.py  engine_test.py  interfaces.py  session.py  verify_api.py
python/litert_lm_builder/: litertlm_builder.py  pyproject.toml
python/litert_lm_cli/: common.py  main_test.py  model.py  serve.py
python/litert_lm_cli/commands/: BUILD  benchmark.py  openai_handler.py  run.py  serve.py  serve_openai_integration_test.py  serve_test.py  serve_util.py
runtime/components/: BUILD
runtime/conversation/: BUILD  conversation.cc  conversation.h  conversation_test.cc  internal_callback_util.cc  internal_callback_util.h  internal_callback_util_test.cc
runtime/core/: BUILD  pipeline.cc  pipeline.h  pipeline_test.cc  session_advanced.cc  session_advanced_test.cc  tasks.cc  tasks.h  tasks_test.cc
runtime/engine/: BUILD  engine_factory.h  io_types.h  litert_lm_lib.cc  litert_lm_lib.h  litert_lm_lib_test.cc
runtime/executor/: BUILD  audio_litert_compiled_model_executor.cc  executor_settings_base.cc  executor_settings_base_test.cc  litert_compiled_model_executor_utils.cc  litert_compiled_model_executor_utils.h  litert_compiled_model_executor_utils_test.cc  llm_litert_compiled_model_executor.cc  vision_litert_compiled_model_executor.cc
runtime/framework/resource_management/: BUILD  execution_manager.h  execution_manager_test.cc  serial_execution_manager.cc  serial_execution_manager.h  threaded_execution_manager.cc  threaded_execution_manager.h
runtime/proto/: llm_metadata.proto
schema/core/: litertlm_header_schema.fbs
swift/: Conversation.swift
tools/: BUILD  dedupe_flatbuffer.cc  dedupe_flatbuffer.h  dedupe_flatbuffer_main.cc  dedupe_flatbuffer_test.cc  test_flatbuffer.fbs
